# monorepo

./: .gitignore  404.html  CNAME  README.md  TODO.md  index.html  mkdocs.yml  pants.toml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
blog/: index.html
blog/archive/2022/: index.html
blog/archive/2023/: index.html
blog/archive/2024/: index.html
blog/category/client-disconnect/: index.html
docs/: CNAME  conferences.md  extra.css  index.md  open-source.md  sponsors.md  talks.md  youtube.md
docs/blog/: .authors.yml  .meta.yml
docs/plugins/: main.py
docs/proposals/: fastapi_history.html  fastapi_history.md
docs/services/: index.md
docs/slides/: asgi_innovations.md  fastapi_history.html  fastapi_history.md  how_the_duck_those_web_packages_work.html  how_the_duck_those_web_packages_work.md  internals.md  maintaining_the_mcp_python_sdk.html  pydantic_v2tronger.md
plugins/: main.py
search/: search_index.json
services/: index.html
slides/: asgi_innovations.html  fastapi_history.html  internals.html  pydantic_v2tronger.html
slides/asgi_innovations/: index.html
slides/assets/: utrecht.avif
slides/fastapi_history/: index.html
slides/how_the_duck_those_web_packages_work/: index.html
slides/internals/: index.html
slides/pydantic_v2tronger/: index.html
sponsors/: index.html
talks/: index.html
website/: README.md  SOCIAL.md  astro.config.mjs  package-lock.json  package.json
website/public/: _redirects  robots.txt
website/scripts/: migrate.mjs
website/src/: content.config.ts
youtube/: index.html
(+61 files in other folders)
